--- a/.github/workflows/CheckIAMPolicy.yml
+++ b/.github/workflows/CheckIAMPolicy.yml
@@ -8,11 +8,10 @@ permissions:
   id-token: write
 
 jobs:
-  S3PackageUpload:
+  CreateIAMPolicy:
     runs-on: ubuntu-latest
     steps:
-      - name: Git clone the repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
