--- a/.github/workflows/CheckIAMPolicy.yml
+++ b/.github/workflows/CheckIAMPolicy.yml
@@ -27,9 +27,11 @@ jobs:
           role-session-name: ReadOnlyRole
           aws-region: ${{env.AWS_REGION}}
       - run: aws sts get-caller-identity
+      - name: Install pyyaml
+        run: pip install pyyaml
       - name:  Create IAM Policy files
         run: |
-          sh ./CreateIAMPolicy.sh
+          python ./src/CreateIAMPolicyFromCFn.py -i ./CFn -o ./IAMPolicyFiles
       - name: Archive IAM Policy files
         uses: actions/upload-artifact@v2
         with:
