--- a/.github/workflows/CheckIAMPolicy.yml
+++ b/.github/workflows/CheckIAMPolicy.yml
@@ -32,11 +32,8 @@ jobs:
       - name:  Create IAM Policy files
         run: |
           python ./src/CreateIAMPolicyFromCFn.py -i ./CFn -o ./IAMPolicyFiles
-      - name: build check
-        run: |
-          ls -R
       - name: Archive IAM Policy files
         uses: actions/upload-artifact@v2
         with:
           name: IAM Policy files
-          path: IAMPoliciyFiles
+          path: ./IAMPoliciyFiles
