--- a/.github/workflows/PyPiBuild.yml
+++ b/.github/workflows/PyPiBuild.yml
@@ -30,13 +30,13 @@ jobs:
           path: dist/
       - name: Upload test pypi
         env:
-          TWINE_USERNAME: ${{ secrets.PYPI_TEST_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_TEST_PASSWORD }}
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          python -m twine upload --skip-existing --repository testpypi dist/*
+          python -m twine upload --skip-existing dist/*
       - name: Install cfn-giam from test pypi
         run: |
-          pip install -i https://test.pypi.org/simple/ cfn-giam
+          pip install cfngiam
       - name: Check version cfn-giam from test pypi
         run: |
           cfn-giam -v
