--- a/example/input/components/s3.yml
+++ b/example/input/components/s3.yml
@@ -1,10 +1,11 @@
 ---
-AWSTemplateFormatVersion: '2010-09-09'
-Description: 'test'
+AWSTemplateFormatVersion: "2010-09-09"
+Description: s3.yml
 Parameters:
   BucketName:
     Type: String
-    Default: "test"
+    Default: "BucketName"
+
 Resources:
   S3Bucket:
     Type: AWS::S3::Bucket
